--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-PORT=https://reizi-dinkel-12-07-2020.herokuapp.com/
+PORT=https://tasks-managment.herokuapp.com/
 DB_HOST=mongodb://127.0.0.1:27017
 DB_NAME=tasks
 DB_NAME=tasks 
